--- a/templates/shopping-chart.html
+++ b/templates/shopping-chart.html
@@ -116,16 +116,16 @@
                     </div>
                     <div class="row ptb20">
                         <span class="chart_desc">
-                            <b>У вас есть 1013 бонусов</b>
+                            <b>У вас есть <span class="s-price-bonus-max">1013</span> бонусов</b>
                             <span>Если вы хотите использовать их для оплаты, укажите количество бонусов</span>
                         </span><!--
-                        --><span class="chart_input"><input type="text" value="100" class="text-box s-change" data-change="bonus" /></span><!--
-                        --><span class="chart_button"><a href="#" class="btn btn_block s-price-button" data-change="bonus">Пересчитать</a></span>
+                        --><span class="chart_input"><input type="text" class="text-box s-change s-price-bonus-input" data-change="bonus" /></span><!--
+                        --><span class="chart_button"><a href="#" class="btn btn_grey s-price-bonus-button" data-change="bonus">Пересчитать</a></span>
                     </div>
                     <div class="row chart_cost">Стоимость товаров: <span class="s-price-total-sum">2000</span> Р</div>
                     <div class="row chart_promo">Скидка по промо-коду: <span class="s-price-promo">200</span> P</div>
-                    <div class="row chart_bonus">Скидка через бонусы: <span class="s-price-bonus">100</span> P</div>
-                    <div class="row chart_final">Стоимость с учетом всех скидок: <span class="s-price-final">1700</span> Р</div>
+                    <div class="row chart_bonus">Скидка через бонусы: <span class="s-price-bonus">0</span> P</div>
+                    <div class="row chart_final">Стоимость с учетом всех скидок: <span class="s-price-final">1800</span> Р</div>
                     <div class="chart_action">
                         <span class="chart_checkout">
                             <a href="#" class="btn btn_block">Оформить заказ</a>
