--- a/templates/includes/_layer_quickview.html
+++ b/templates/includes/_layer_quickview.html
@@ -13,20 +13,19 @@
                 <img src="static/images/ico/orange-favorite.png" class="card-service-ico"/><span class="card-service-txt">Сохранить<br/>в избранное</span>
             </a>
         </div>
-        <div class="card-desc">
+        <div class="card-desc s-price">
             <h1>Royal Canin Maxi Junior Канин для молодых собак крупных пород 4 кг</h1>
             <div class="card-code">Код товара: 12778</div>
-            <input type="hidden" class="prod-price-actual" value="520"/>
             <div class="import card-complex-note">Выберите упаковку:</div>
             <div class="card-complex-cont">
-                <div class="card-complex-item selected">
+                <div class="card-complex-item selected s-price-choice">
                     <div class="card-complex-bg">
                         <div class="card-complex-value">800 г</div>
                         <div class="card-complex-price">520 Р</div>
                     </div>
                     <div class="marker-avaliable">В наличии</div>
                 </div>
-                <div class="card-complex-item">
+                <div class="card-complex-item s-price-choice">
                     <div class="card-complex-bg">
                         <div class="card-complex-value">3,5 кг</div>
                         <div class="card-complex-price">2540 Р</div>
@@ -43,10 +42,10 @@
             </div>
             <div class="card-short-desc">Корм для щенков с с высоким содержанием животного протеина и малым количеством углеводов. Описание продукта, которое есть на вкладке "Описание" в полной карточке.</div>
             <div class="card-count">
-                Количество <span class="count-dec"></span><input type="text" class="card-count-input" value="1"/><span class="count-inc"></span>
+                Количество <span class="count-dec s-price-dec"></span><input type="text" class="card-count-input s-price-input" value="1" maxlength="3" /><span class="count-inc s-price-inc"></span>
             </div>
-            <div class="card-total">
-                Цена: <span class="total-value">1080</span> руб  <span class="total-desc">(520 х <span class="counter-value">2</span>)</span>
+            <div class="card-total s-price-block">
+                Цена: <span class="s-price-total">1080</span> руб  <span class="total-desc">(<span class="s-price-one">520</span> х <span class="s-price-num">2</span>)</span>
             </div>
             <div>
                 <div class="linkcard-cont">
