--- a/templates/includes/_orders_edit.html
+++ b/templates/includes/_orders_edit.html
@@ -9,7 +9,7 @@
     </div>
     <div class="plr20 chart">
         <table>
-            <tr class="row">
+            <tr class="row s-price">
                 <td><span class="chart_del"></span></td>
                 <td class="chart_product chart_product_wide">
                     <a href="#" class="fleft">
@@ -19,23 +19,23 @@
                         <a href="#" class="chart_link">Royal Canin</a>
                         <p class="mb10">Adult Neutered Small Dog, корм собак мелких пород</p>
                         <div class="big-select">
-                            <select class="select2-complex">
-                                <option selected data-volume="2,5 кг">725 Р</option>
-                                <option data-volume="1 кг">320 Р</option>
+                            <select class="select2-complex s-price-select">
+                                <option selected data-volume="2,5 кг">500 Р</option>
+                                <option data-volume="1 кг">300 Р</option>
                                 <option data-volume="0,5 кг">150 Р</option>
                             </select>
                         </div>
                     </div>
                 </td>
                 <td class="chart_number chart_number_wide">
-                    <span class="count-dec"></span><input type="text" class="card-count-input" value="1"/><span class="count-inc"></span>
+                    <span class="count-dec s-price-dec"></span><input type="text" class="card-count-input s-price-input" value="2" maxlength="3" /><span class="count-inc s-price-inc"></span>
                 </td>
                 <td class="chart_price chart_price_wide">
-                    <span class="chart_total">5250 Р</span>
-                    <span>(2625 Р x 2)</span>
+                    <span class="chart_total"><span class="s-price-total">1000</span> Р</span>
+                    <span>(<span class="s-price-one">500</span> Р x <span class="s-price-num">2</span>)</span>
                 </td>
             </tr>
-            <tr class="row">
+            <tr class="row s-price">
                 <td><span class="chart_del"></span></td>
                 <td class="chart_product chart_product_wide">
                     <a href="#" class="fleft">
@@ -71,11 +71,11 @@
                     </div>
                 </td>
                 <td class="chart_number chart_number_wide">
-                    <span class="count-dec"></span><input type="text" class="card-count-input" value="1"/><span class="count-inc"></span>
+                    <span class="count-dec s-price-dec"></span><input type="text" class="card-count-input s-price-input" value="3" maxlength="3" /><span class="count-inc s-price-inc"></span>
                 </td>
                 <td class="chart_price chart_price_wide">
-                    <span class="chart_total">2100 Р</span>
-                    <span>(1050 Р x 2)</span>
+                    <span class="chart_total"><span class="s-price-total">3000</span> Р</span>
+                    <span>(<span class="s-price-one">1000</span> Р x <span class="s-price-num">3</span>)</span>
                 </td>
             </tr>
         </table>
@@ -94,7 +94,7 @@
                 <a href="#" class="btn btn_block">Применить</a>
             </div>
             <a href="#" class="chart_add">Добавить товары из корзины</a>
-            <div class="chart_orders fright">Стоимость товаров: 1380 Р</div>
+            <div class="chart_orders fright">Стоимость товаров: <span class="s-price-final">4000</span> Р</div>
         </div>
     </div>
 </div>
