--- a/templates/ordering_login.html
+++ b/templates/ordering_login.html
@@ -63,21 +63,21 @@
                     </label>
                 </div>
                 <div class="ordering_address s-delivery-type-form">
-                    <label for="delivery2" class="form_radio mb20">
+                    <label for="delivery2" class="form_radio mb20 s-delivery-address-block">
                         <input type="radio" name="delivery-address" id="delivery2" class="s-delivery-address" checked/>
                         <i></i>
                         <span class="semibold">Основной адрес</span>
                         <span class="def-color s-delivery-address-str">(<span class="s-street">Химкинский бульвар</span>, д. <span class="s-house">5</span>, корп. <span class="s-corp">4</span>, кв.<span class="s-office">12</span>)</span>
                         <span class="form_icon edit s-delivery-address-edit"></span>
                     </label>
-                    <label for="delivery3" class="form_radio mb20">
+                    <label for="delivery3" class="form_radio mb20 s-delivery-address-block">
                         <input type="radio" name="delivery-address" id="delivery3" class="s-delivery-address" />
                         <i></i>
                         <span class="semibold">Дача</span>
                         <span class="def-color s-delivery-address-str">(ул. <span class="s-street">Туристическая</span>, <span class="s-house">15</span>)</span>
                         <span class="form_icon edit s-delivery-address-edit"></span>
                     </label>
-                    <label for="delivery4" class="form_radio mb25">
+                    <label for="delivery4" class="form_radio mb25 s-delivery-address-block">
                         <input type="radio" name="delivery-address" id="delivery4" class="s-delivery-address" data-new="true" />
                         <i></i>
                         <span class="semibold">Новый адрес</span>
