--- a/static/scss/_forms.scss
+++ b/static/scss/_forms.scss
@@ -287,6 +287,17 @@ input.btn {
     vertical-align: top;
   }
 }
+.form_panel {
+  margin-bottom: 25px;
+  padding: 15px 20px;
+  border-radius: 5px;
+  background-color: $color-bg-grey;
+  line-height: 21px;
+
+  .form_text {
+    background-color: $color-white;
+  }
+}
 .form_substrate {
   margin-bottom: 20px;
   padding: 15px 10px;
