--- a/templates/includes/_orders_edit.html
+++ b/templates/includes/_orders_edit.html
@@ -116,56 +116,28 @@
     </div>
     <div class="row mb20">
         <p class="semibold mb15">Изменить адрес доставки:</p>
-        <form action="#" method="post">
-            <label for="delivery2" class="form_radio mb10">
-                <input type="radio" name="delivery-address" id="delivery2" class="s-delivery-address" checked/>
-                <i></i>
-                <span>Основной адрес</span>
-                <span class=" s-delivery-address-str">(г. <span class="s-city">Москва</span>, <span class="s-street">Химкинский бульвар</span>, д. <span class="s-house">5</span>, кв.<span class="s-office">12</span>)</span>
-                <span class="form_icon edit s-delivery-address-edit"></span>
-            </label>
-            <label for="delivery3" class="form_radio mb10">
-                <input type="radio" name="delivery-address" id="delivery3" class="s-delivery-address" />
-                <i></i>
-                <span>Дача</span>
-                <span class=" s-delivery-address-str">(г. <span class="s-city">Реутов</span>, ул. <span class="s-street">Туристическая</span>, <span class="s-office">15</span>)</span>
-                <span class="form_icon edit s-delivery-address-edit"></span>
-            </label>
-            <label for="delivery4" class="form_radio mb20"><input type="radio" name="delivery-address" id="delivery4" class="s-delivery-address" data-new="true" /><i></i>Новый адрес</label>
-            <div class="hidden s-delivery-address-form">
-                <div class="form_group">
-                    <div class="autocomplete-cont">
-                        <label for="city2" class="form_label">Город:</label>
-                        <input type="text" id="city2" class="form_text autocomplete-input s-city" value="М"/>
-                        <div class="autocomplete">
-                            <div class="autocomplete-line">Москва</div>
-                            <div class="autocomplete-line">Мурманск</div>
-                        </div>
-                    </div>
-                </div>
-                <div class="form_group_full">
-                    <div class="form_inline form_group">
-                        <label for="street2" class="form_label">Улица:</label>
-                        <input type="text" id="street2" class="form_text s-street" />
-                    </div>
-                    <div class="form_inline form_group_thin">
-                        <label for="house2" class="form_label">Дом:</label>
-                        <input type="text" id="house2" class="form_text s-house" />
-                    </div>
-                    <div class="form_inline form_group_thin">
-                        <label for="corp2" class="form_label">Строение/корпус:</label>
-                        <input type="text" id="corp2" class="form_text s-corp" />
-                    </div>
-                    <div class="form_inline form_group_thin">
-                        <label for="office2" class="form_label">Квартира/офис:</label>
-                        <input type="text" id="office2" class="form_text s-office" />
-                    </div>
-                </div>
-            </div>
-            <div class="form_group mb20">
-                <input type="submit" class="btn btn_block" value="Изменить адрес" />
-            </div>
-        </form>
+        <label for="delivery2" class="form_radio mb10 s-delivery-address-block">
+            <input type="radio" name="delivery-address" id="delivery2" class="s-delivery-address" checked/>
+            <i></i>
+            <span class="s-name">Основной адрес</span>
+            <span class="s-delivery-address-str">(г. <span class="s-city">Москва</span>, <span class="s-street">Химкинский бульвар</span>, д. <span class="s-house">5</span>, кв.<span class="s-office">12</span>)</span>
+            <span class="form_icon edit s-delivery-address-edit"></span>
+        </label>
+        <label for="delivery3" class="form_radio mb10 s-delivery-address-block">
+            <input type="radio" name="delivery-address" id="delivery3" class="s-delivery-address" />
+            <i></i>
+            <span class="s-name">Дача</span>
+            <span class="s-delivery-address-str">(г. <span class="s-city">Реутов</span>, ул. <span class="s-street">Туристическая</span>, <span class="s-office">15</span>)</span>
+            <span class="form_icon edit s-delivery-address-edit"></span>
+        </label>
+        <label for="delivery4" class="form_radio mb20 s-delivery-address-block">
+            <input type="radio" name="delivery-address" id="delivery4" class="s-delivery-address" data-new="true" />
+            <i></i>
+            <span>Новый адрес</span>
+        </label>
+        <div class="form_group mb20">
+            <button class="btn btn_block">Изменить адрес</button>
+        </div>
     </div>
     <div>
         <p class="semibold mb15">Изменить дату и время доставки:</p>
