--- a/templates/office.html
+++ b/templates/office.html
@@ -48,6 +48,66 @@
 			//= includes/_bonuses.html
 		</div>
 	</div>
+	<div class="hidden s-change s-delivery-address-form" data-change="address">
+		<div class="form_group">
+			<label for="delivery" class="form_label">Название для адреса:</label>
+			<input type="text" id="delivery" class="form_text s-name" value="Адрес №1" />
+		</div>
+		<div class="form_group">
+			<div class="autocomplete-cont">
+				<label for="city" class="form_label">Город:</label>
+				<input type="text" id="city" class="form_text autocomplete-input s-city" value="М"/>
+				<div class="autocomplete">
+					<div class="autocomplete-line">Москва</div>
+					<div class="autocomplete-line">Мурманск</div>
+				</div>
+			</div>
+		</div>
+		<div class="form_group">
+			<div class="autocomplete-cont">
+				<label for="station" class="form_label">Ближайшее метро:</label>
+				<input type="text" id="station" class="form_text autocomplete-input s-station" value="Ново"/>
+				<div class="autocomplete">
+					<div class="autocomplete-line">Новокосино</div>
+					<div class="autocomplete-line">Новослободская</div>
+					<div class="autocomplete-line">Новокузнецкая</div>
+					<div class="autocomplete-line">Новогиреево</div>
+				</div>
+			</div>
+		</div>
+		<div class="form_group_full">
+			<div class="form_inline form_group">
+				<label for="street" class="form_label">Улица:</label>
+				<input type="text" id="street" class="form_text s-street" />
+			</div>
+			<div class="form_inline form_group_thin">
+				<label for="house" class="form_label">Дом:</label>
+				<input type="text" id="house" class="form_text s-house" />
+			</div>
+			<div class="form_inline form_group_thin">
+				<label for="corp" class="form_label">Строение/корпус:</label>
+				<input type="text" id="corp" class="form_text s-corp" />
+			</div>
+			<div class="form_inline form_group_thin">
+				<label for="office" class="form_label">Квартира/офис:</label>
+				<input type="text" id="office" class="form_text s-office" />
+			</div>
+		</div>
+		<div class="form_group form_group_full mb30">
+			<div class="form_inline form_group_thin">
+				<label for="access" class="form_label">Подъезд:</label>
+				<input type="text" id="access" class="form_text s-access" />
+			</div>
+			<div class="form_inline form_group_thin">
+				<label for="floor" class="form_label">Этаж:</label>
+				<input type="text" id="floor" class="form_text s-floor" />
+			</div>
+			<div class="form_inline form_group_thin">
+				<label for="intercom" class="form_label">Домофон:</label>
+				<input type="text" id="intercom" class="form_text s-intercom" />
+			</div>
+		</div>
+	</div>
 </div>
 
 //= includes/_footer.html
