попап добавления в корзину

--- a/static/scss/_global.scss
+++ b/static/scss/_global.scss
@@ -38,6 +38,9 @@
 .w440 {
   width: 440px;
 }
+.w600 {
+  width: 600px;
+}
 
 .mr0 {
   margin-right: 0 !important;
@@ -173,6 +176,13 @@ h4.fs13, .fs13 {
 }
 .lh40 {
   line-height: 40px;
+}
+
+.text-center {
+  text-align: center;
+}
+.text-left {
+  text-align: left;
 }
 
 .def-color {
