--- a/templates/card.html
+++ b/templates/card.html
@@ -42,8 +42,8 @@
 							Цена: <span class="s-price-total">1080</span> руб  <span class="total-desc">(<span class="s-price-one">540</span> х <span class="s-price-num">2</span>)</span>
 						</div>
 						<div class="mb36">
-							<a href="" class="btn btn-buy">В корзину</a>
-							<a href="#layer-click" class="fancybox semibold">Купить в 1 клик</a>
+							<a href="#layer-chart" class="btn btn-buy fancybox">В корзину</a>
+							<a href="#layer-click" class="semibold fancybox">Купить в 1 клик</a>
 						</div>
 					</div>
 
