--- a/templates/includes/_card_tabs.html
+++ b/templates/includes/_card_tabs.html
@@ -18,10 +18,10 @@
             — содержит витамины и клетчатку<br/><br/>
             </div>
             <h3>Ключевые особенности:</h3>
-            <h4 class="ver2">1. Поддержка в городской среде</h4>
+            <h4 class="v2">1. Поддержка в городской среде</h4>
             <p>URBAN LIFE ADULT содержит уникальный комплекс антиоксидантов, помогающий собакам, живущим в городе, справляться с оксидативным стрессом, вызванным загрязнением окружающей среды. Продукт содержит ценные питательные вещества из рыбного сырья, которые также способствуют поддержанию здоровья городской собаки, часто сталкивающейся со стрессовыми ситуациями (городской шум, скопления людей, автомобильное движение).
             </p>
-            <h4 class="ver2">2. Поддержание жизненных сил</h4>
+            <h4 class="v2">2. Поддержание жизненных сил</h4>
             <p>Способствует сохранению здоровья суставов и костей, содержит питательные вещества, поддерживающие функцию нервной системы.
             Крокета, легко поддающаяся разгрызанию. Уникальные форма, текстура и размер крокет стимулируют собак к тщательному разгрызанию корма.</p>
             <p>Артикул: Ro34203-5</p>
@@ -32,7 +32,7 @@
             <p>Отборное мясо в сочетании со злаками.</p>
             <p> Дегидратированное мясо птицы, кукуруза, животные жиры, кукурузная мука, изолят растительных белков*, свекольный жом, кукурузный глютен, гидролизат белков животного происхождения, минеральные вещества, рыбий жир, соевое масло, оболочки и семена подорожника Psyllium, фруктоолигосахариды, гидролизованный белок рыбы, гидролизат дрожжей (источник маннановых олигосахаридов), экстракт бархатцев прямостоячих (источник лютеина).<br/><br/>
             * L.I.P.: белки, отобранные по принципу максимальной усвояемости.  </p>
-            <h4 class="ver2">ДОБАВКИ (в 1 кг)</h4>
+            <h4 class="v2">ДОБАВКИ (в 1 кг)</h4>
             <p>
             Питательные добавки: витамин А: 24900 МЕ, Витамин D3: 1200 МЕ, Е1 (же-лезо): 41 мг, Е2 (йод): 4,1 мг, Е4 (медь): 13 мг, Е5 (марганец): 53 мг, Е6 (цинк): 159 мг, Е8 (селен): 0,09 мг. – Технологические добавки: клиноптилолит осадочного происхождения: 10 г – Консерванты – Антиокислители.</p> 
         </div>
