--- a/templates/includes/_footer.html
+++ b/templates/includes/_footer.html
@@ -81,9 +81,10 @@
 //= _layer_login.html
 //= _layer_help.html
 //= _layer_call.html
-//= _layer_status.html
 //= _layer_quickview.html
+//= _layer_chart.html
 //= _layer_click.html
+//= _layer_status.html
 //= _layer_favorite.html
 
 <!-- jquery -->
