--- a/templates/includes/_layer_call.html
+++ b/templates/includes/_layer_call.html
@@ -1,7 +1,7 @@
 <div class="layer" id="layer-call">
-    <div class="layer-inner w240">
+    <div class="layer_inner w240">
         <h3>Обратный звонок</h3>
-        <div class="layer-note">Укажите телефон, на который<br/>нужно перезвонить.</div>
+        <div class="layer_note">Укажите телефон, на который<br/>нужно перезвонить.</div>
         <form>
             <div class="label"><label for="f1">Телефон*:</label></div>
             <input type="tel" class="def-input phone-mask" placeholder="+7 (111) 111-11-11" id="f1"/>
