--- a/templates/includes/_layer_click.html
+++ b/templates/includes/_layer_click.html
@@ -1,7 +1,7 @@
 <div class="layer" id="layer-click">
-    <div class="layer-inner w240">
+    <div class="layer_inner w240">
         <h3>Купить в 1 клик</h3>
-        <div class="layer-note">Менедер свяжется с вами, чтобы оформить заказ по телефону.</div>
+        <div class="layer_note">Менедер свяжется с вами, чтобы оформить заказ по телефону.</div>
         <form>
             <div class="label"><label for="f100">Телефон*:</label></div>
             <input type="tel" class="def-input phone-mask" placeholder="+7 (111) 111-11-11" id="f100"/>
