--- a/templates/includes/_layer_favorite.html
+++ b/templates/includes/_layer_favorite.html
@@ -1,5 +1,5 @@
 <div class="layer" id="layer-addfav">
-    <div class="layer-inner w240">
+    <div class="layer_inner w240">
         <h3>Выберите список</h3>
         <form>
             <div class="new-list-cont">
@@ -26,7 +26,7 @@
 </div>
 
 <div class="layer" id="layer-editfav">
-    <div class="layer-inner w240">
+    <div class="layer_inner w240">
         <h3>Мои списки</h3>
         <form>
             <div class="label"><label for="f199">Название списка:</label></div>
@@ -37,7 +37,7 @@
 </div>
 
 <div class="layer" id="layer-deletefav">
-    <div class="layer-inner w240">
+    <div class="layer_inner w240">
         <h3>Удалить список?</h3>
         <button class="btn btn_block">Удалить</button>
     </div>
