--- a/templates/includes/_layer_help.html
+++ b/templates/includes/_layer_help.html
@@ -1,5 +1,5 @@
 <div class="layer" id="layer-help">
-    <div class="layer-inner w240">
+    <div class="layer_inner w240">
         <h3>Нужна помощь</h3>
         <div class="help-list-item">
             <img src="static/images/ico/h1.png" alt="" class="help-list-ico"/>
