--- a/templates/includes/_layer_login.html
+++ b/templates/includes/_layer_login.html
@@ -1,5 +1,5 @@
 <div class="layer" id="layer-message">
-    <div class="layer-inner w440">
+    <div class="layer_inner w440">
         <h3>Вы успешно зарегистрированы!</h3>
         <div class="mess-block">
             <p>На вашу электронную почту vladimir@mail.ru отправлено письмо,<br/>чтобы вы подтвердили этот адрес.<br/>
@@ -21,7 +21,7 @@
 </div>
 
 <div class="layer" id="layer-reg">
-    <div class="layer-inner w240 sm-pad">
+    <div class="layer_inner w240 sm-pad">
         <h3>Регистрация</h3>
         <form>
             <div class="label"><label for="f130">E-mail:</label></div>
@@ -39,7 +39,7 @@
             <div class="fs11 lh13 mb10">Нажимая на кнопку «Зарегистрироваться», вы согласны с <a href="">«Условиями продажи»</a>.</div>
         </form>
     </div>
-    <div class="layer-btm w280">
+    <div class="layer_btm w280">
         <div class="mb16">
             <span class="reg-note1">У вас уже есть аккаунт?</span>
             <a href="#layer-login" class="blue fancybox">Войти</a>
@@ -54,10 +54,10 @@
 </div>
 
 <div class="layer" id="layer-login">
-    <div class="layer-top w280">
+    <div class="layer_top w280">
         Чтобы работать со списком избранных товаров, войдите в аккаунт или зарегистрируйтесь
     </div>
-    <div class="layer-inner w240 sm-pad">
+    <div class="layer_inner w240 sm-pad">
         <h3>Вход в аккаунт</h3>
         <form>
             <div class="label"><label for="f110">E-mail / мобильный телефон:</label></div>
@@ -76,7 +76,7 @@
             <div><a href="#layer-forgetpass" class="fancybox fs11">Забыли пароль?</a></div>
         </form>
     </div>
-    <div class="layer-btm w280">
+    <div class="layer_btm w280">
         <div class="float-cont mb16">
             <div class="fleft">У вас нет аккаунта?</div>
             <a href="#layer-reg" class="fright blue fancybox">Зарегистрироваться</a>
