--- a/templates/includes/_layer_quickview.html
+++ b/templates/includes/_layer_quickview.html
@@ -49,7 +49,7 @@
             </div>
             <div>
                 <div class="linkcard-cont">
-                    <a href="" class="btn btn-buy btn_block">В корзину</a>
+                    <a href="#layer-chart" class="btn btn-buy btn_block fancybox">В корзину</a>
                     <a href="card_complex.html" class="related-suggest">Карточка товара</a>
                 </div>
                 <a href="#layer-click" class="fancybox semibold lh40">Купить в 1 клик</a>
