--- a/templates/includes/_layer_remind.html
+++ b/templates/includes/_layer_remind.html
@@ -1,7 +1,7 @@
 <div class="layer" id="layer-remind">
-    <div class="layer-inner w240">
+    <div class="layer_inner w240">
         <h3>Сообщить о поступлении</h3>
-        <div class="layer-note">Каким способом вам сообщить<br/>о поступлении товара?</div>
+        <div class="layer_note">Каким способом вам сообщить<br/>о поступлении товара?</div>
         <form>
 
             <div class="label"><label for="f205">На e-mail:</label></div>
