--- a/templates/includes/_layer_size.html
+++ b/templates/includes/_layer_size.html
@@ -1,5 +1,5 @@
 <div class="layer" id="layer-size">
-    <div class="layer-inner w600">
+    <div class="layer_inner w600">
         <h3>Таблица размеров</h3>
         текст...
     </div>
