--- a/templates/includes/_layer_status.html
+++ b/templates/includes/_layer_status.html
@@ -1,14 +1,14 @@
 <div class="layer" id="layer-status">
-    <div class="layer-inner w240">
+    <div class="layer_inner w240">
         <h3>Статус заказа</h3>
         <form>
-            <div class="layer-note3">Укажите номер заказа (6 цифр)</div>
+            <div class="layer_note3">Укажите номер заказа (6 цифр)</div>
             <input type="text" class="def-input" placeholder="123456"/>
             <div class="mb36">
                 <input type="submit" class="btn btn_block" value="Отправить"/>
             </div>
 
-            <div class="layer-note">
+            <div class="layer_note">
                 Если вы не помните номер заказа,
                 укажите номер телефона или e-mail,
                 которые вы использовали при оформлении заказа. Ответ придет на телефон или e-mail.
@@ -16,13 +16,13 @@
             <input type="text" class="def-input" placeholder="Телефон или e-mail"/>
             <div class="mb36"><input type="submit" class="btn btn_block" value="Отправить"/></div>
 
-            <div class="layer-note2">
+            <div class="layer_note2">
                 Или позвоните по телефону:
                 <div class="h3 mb0">+7 (495) 111-11-11</div>
             </div>
         </form>
     </div>
-    <div class="layer-btm1 w240">
+    <div class="layer_btm1 w240">
         <div class="mb25">Если вы зарегистрированы на сайте,
             вы можете отслеживать статус
             в Личном кабинете в разделе
