--- a/static/scss/_layers.scss
+++ b/static/scss/_layers.scss
@@ -2,8 +2,12 @@
 .layer {
   display: none;
 }
-.layer-inner {
+.layer_inner {
   padding: 35px 40px 40px;
+}
+.layer_inner.sm-pad {
+  padding-bottom: 10px;
+  padding-top: 25px;
 }
 .layer h3 {
   color: $color-black;
@@ -50,27 +54,51 @@ input.def-input {
   font-size: 12px;
   font-family: 'opensanssemibold';
 }
-.layer-note {
+.layer_note {
+  line-height: 1.5em;
   color: $color-black;
   margin-bottom: 12px;
 }
 .sub-cont {
   padding-top: 10px;
 }
-.layer-note {
-  line-height: 1.5em;
-}
-.layer-note2 {
+.layer_note2 {
   text-align: center;
   color: $color-black;
   line-height: 1.5em;
 }
-.layer-note3 {
+.layer_note3 {
   margin-bottom: 5px;
   color: $color-black;
 }
-.layer-btm {
+.layer_top {
+  background: $color-bg-grey;
+  font-size: 11px;
+  line-height: 1.4em;
+  border-radius: 4px 4px 0 0;
+  padding: 20px 0 15px 40px;
+}
+.layer_btm {
+  background: $color-bg-grey;
+  line-height: 1.2em;
+  border-radius: 0 0 4px 4px;
+  padding: 20px 20px 16px;
+  color: $color-black;
+}
+.layer_btm1 {
   background: #f5f5f5;
   padding: 13px 40px 35px;
   line-height: 1.5em;
+  border-radius: 0 0 4px 4px;
+}
+.layer_buttons {
+  padding-top: 46px;
+  font-size: 11px;
+  line-height: 16px;
+  color: $color-text-grey;
+  text-align: center;
+  overflow: hidden;
+}
+.layer_or {
+  line-height: 38px;
 }
