--- a/templates/includes/_header_login.html
+++ b/templates/includes/_header_login.html
@@ -74,15 +74,15 @@
                             <a href="#" class="person-link popup-btn" data-top-offset="20">Константин</a>
                             <div class="popup-layer popup_colored popup_person">
                                 <div class="popup-inner row">
-                                    <p><a href="#">Мой аккаунт</a></p>
-                                    <p><a href="#">Мои заказы</a></p>
-                                    <p><a href="#">Избранное</a></p>
-                                    <p><a href="#">Рассылки</a></p>
-                                    <p><a href="#">Бонусы, <br/>промо-коды</a></p>
+                                    <p class="popup_person_item person"><a href="#">Мой аккаунт</a></p>
+                                    <p class="popup_person_item order"><a href="#">Мои заказы</a></p>
+                                    <p class="popup_person_item favorite"><a href="#">Избранное</a></p>
+                                    <p class="popup_person_item mail"><a href="#">Рассылки</a></p>
+                                    <p class="popup_person_item promo"><a href="#">Бонусы, <br/>промо-коды</a></p>
                                 </div>
                                 <div class="popup-inner">
-                                    <p><a href="#">Выход</a></p>
-                                    <p><a href="#">Помощь</a></p>
+                                    <p class="popup_person_item exit"><a href="#">Выход</a></p>
+                                    <p class="popup_person_item help"><a href="#">Помощь</a></p>
                                 </div>
                                 <div class="popup-close"></div>
                             </div>
